[tool.poetry]
name = "plus-authenticator"
version = "0.1.0"
description = ""
authors = ["Pedro Gustavo Santana <pedrogustavosantan97@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pydantic = "^2.7.3"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
PyJWT = "^2.8.0"
PyYAML = "^6.0.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
email-validator = "^2.1.1"
tortoise-orm = "^0.21.3"
plus_db_agent = { git = "https://github.com/pedrogs97/plus_db_agent.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
